Replaced ng-router with ui-router and moved to Bootstrap v4 apha
Reworked existing Angular modules to support Bootstrap v4 alpha.
Reworked main page to utilize ui-router in place of the standard
ng-router.  Added a mock picture module.  Modified the main layout to
utilize Bootstrap v4's card columns.

--- a/app/app.css
+++ b/app/app.css
@@ -32,8 +32,8 @@
 .icon {
     font-size: 72px;
 }
-.col-8-equal {
-    width: 12.5%;
+.icon-lg {
+  font-size: 84px;
 }
 .temp {
   fon-size: 24px;
